--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,16 @@ dependencies:
   cached_network_image: ^3.1.0
   badges: ^2.0.2
   carousel_slider: ^4.0.0
+  firebase_core: ^2.7.0
+  firebase_auth: ^4.2.9
+  cloud_firestore: ^4.4.4
+  image_picker: ^0.8.7+1
+  firebase_storage: ^11.1.0
+  firebase_storage_web: ^3.4.0
+  readmore: ^2.1.0
+  google_fonts:
+
+
 
 dev_dependencies:
   flutter_test:
