--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   firebase_storage_web: ^3.4.0
   readmore: ^2.1.0
   google_fonts:
+  intl: ^0.18.1
+  firebase_app_check: ^0.2.1+3
+
 
 
 
