--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,8 +50,8 @@ dependencies:
   google_fonts:
   intl: ^0.18.1
   firebase_app_check: ^0.2.1+3
-
-
+  get: ^4.6.6
+  
 
 
 dev_dependencies:
@@ -78,6 +78,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/icons/categories/
+    
 
   # To add assets to your application, add an assets section, like this:
   # assets:
