--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,8 +50,10 @@ dependencies:
   google_fonts:
   intl: ^0.18.1
   firebase_app_check: ^0.2.1+3
-  get: ^4.6.6
-  
+  url_launcher: ^6.0.6
+  syncfusion_flutter_pdfviewer: ^20.3.0
+
+
 
 
 dev_dependencies:
