--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   firebase_app_check: ^0.2.1+3
   url_launcher: ^6.0.6
   syncfusion_flutter_pdfviewer: ^20.3.0
+  flutter_inappwebview: any
 
 
 
