--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,13 +53,13 @@ dependencies:
   url_launcher: ^6.0.6
   syncfusion_flutter_pdfviewer: ^20.3.0
   flutter_inappwebview: any
-
-
-
+  go_router: ^12.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.0.0
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -67,6 +67,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  integration_test:
+    sdk: flutter
+  flutter_driver:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
